Revert "test(css): prevent horizontal overflow shift on scroll after dropdown selection: add overflow-x and width in 1 CSS file"
This reverts commit 4b20d8d6a7a1886a5f5a9d80a37c8aa1aa56b673.

--- a/css/who-are-you.css
+++ b/css/who-are-you.css
@@ -60,8 +60,6 @@ body {
 
   /* Classic cursor, no frillies (aka no I-beam/insertion point symbol when hovering over nav links)  */
   cursor: default;
-  overflow-x: hidden;
-  width: 100%;
 }
 
 /* 
